--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ log = "0.4.27"
 [dev-dependencies]
 cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
 cortex-m-rt = "0.7.5"
+alloc-cortex-m = "0.4.4"
 stm32f4xx-hal = { version = "0.22.1", features = ["stm32f429"] }
 rtt-target = "0.6.1"
 log = "0.4.27"
